# upb-fils-ma.github.io

./: .gitignore  .gitlab-ci.yml  404.html  CNAME  Cargo.toml  README.md  blog.html  build.sh  docusaurus.config.ts  ername  index.html  markdown-page.html  package-lock.json  package.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: deploy.yml  gitlab.yml  labeler.yml  test-deploy.yml
assets/css/: styles.037d2e5c.css  styles.1a6e5a82.css  styles.83e17ad0.css  styles.d1b5278a.css  styles.f6370a99.css
assets/js/: 01a85c17.5f7e4b2c.js  01a85c17.b1e2f5f2.js  01a85c17.c134c34d.js  01a85c17.f56a1b68.js  01a85c17.f9dafd35.js  031793e1.2c754e10.js  031793e1.aa5a3546.js  032321f1.0ea2e302.js  032321f1.4e69d748.js  03fb5c4d.3176c2ee.js  03fb5c4d.80b39a41.js  04680354.447974c5.js  04680354.c4d08cc4.js  0680d229.14030483.js  0680d229.5cff6ec9.js  06ac55dc.b2ba98ba.js  06ac55dc.b5e4e053.js  06afc109.0a5ff649.js  06afc109.523fa772.js  06afc109.808442ff.js  06afc109.8a6fd24d.js  06afc109.a71c40e1.js  06afc109.aeacf80e.js  0772763f.0170ff47.js  0772763f.44289aea.js  0772763f.57e9f04b.js  0772763f.ed012f77.js  0772763f.fccbf036.js  07a2e45a.098a1a60.js  07a2e45a.812109e5.js  07a2e45a.d8909c21.js  07a2e45a.dc86621d.js  07a2e45a.fd65fbed.js  08342c14.8cd93e52.js  08342c14.8d9b497c.js  08342c14.c8da95c7.js  083f00ab.4c3e46bf.js  083f00ab.5c2defd9.js  09097cd8.0493561c.js  09097cd8.75cf0a28.js  (+3987 more)
assets/lab01_firmware/: pico_h.uf2
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
docs/: project.html  project.md  welcome.html
docs/acs_cc/: 01.html  project.html  welcome.html
docs/acs_cc/category/: lab.html  lecture.html  project.html  tutorials.html
docs/acs_cc/lab/: 00.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html
docs/acs_cc/lecture/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html
docs/acs_cc/tutorial/: kicad.html
docs/acs_cc/tutorials/: embassy.html
docs/category/: lab.html  lecture.html  project.html  projects-2024.html  tutorials.html
docs/fils_en/: 01.html  project.html  welcome.html
docs/fils_en/category/: lab.html  lecture.html  project.html  projects-2024.html  tutorials.html
docs/fils_en/lab/: 00.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html
docs/fils_en/lecture/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html
docs/fils_en/tutorial/: kicad.html
docs/fils_en/tutorials/: embassy.html
docs/lab/: 00.html  00.md  01.html  01.md  02.html  02.md  03.html  04.html  05.html  06.html  07.html  08.html  Setup.md  _category_.json  lab04.html
docs/lab/01/: index.md
docs/lab/02/: 02.md
docs/lab/03/: 03.md  index.md
docs/lab/04/: index.md
docs/lab/05/: index.md
docs/lab/06/: index.md
docs/lab/07/: index.md
docs/lab/08/: index.md
docs/lab/lab04/: lab04.md
docs/lecture/: 01.html  01.md  02.html  02.md  03.html  03.md  04.html  04.md  05.html  05.md  06.html  06.md  07.html  07.md  08.html  08.md  09.html  10.html  10.md  _category_.json  intro-to-arm.md
docs/project/: _category_.json  index.md
docs/project/2024/: 132764.md  133035.md  Index.md  Ioana_maria.cristea.html  Layla.el.html  Ruxandra.popa.html  _category_.json  abdul.mirghani.html  adrian.bontas.html  alberto.udrea0412.html  alberto.udrea0412.md  alecsandra_elena.iordache.html  alexandra.oblu.html  alexandru.ifrim2408.html  alexia.nica.html  alisan.guneri.html  alkhatib.hoda.html  amalia.munteanu.html  ana.teodorescu2203.html  ana_alexia.alecu.html  ana_maria.adascalitei.html  ana_maria.balutoiu.html  ana_maria.batagoi.html  ana_maria.comeaga.html  andra_ioana.uritu.html  andrei.dragota.html  antonio.pelmus.html  azzam.zafar.html  carina.grec.html  catalin.barabas.html  costin.ciuraru.html  cristian.iacobescu.html  cristiana.precup.html  denis_andrei.rapa.html  denisa.craciun.html  eduard.finichiu.html  eduard.matei2905.html  elena.bilciurescu_daria_maria.toma.html  emma.rachiteanu.html  essam.al.html  (+62 more)
docs/project/2024/denisa.craciun/software/: Cargo.toml  README.txt
docs/project/2024/denisa.craciun/software/src/: main.rs
docs/project/2024/filip.denisa/: Cargo.toml  build.rs  index.md  main.rs
docs/project/2024/ionut.boghici/project/transmitter/: Cargo.toml  README.txt
docs/project/2024/ionut.boghici/project/transmitter/src/: main.rs
docs/tutorials/: embassy.html  kicad.html  kicad.md
docs/tutorials/embassy/: index.md
docs/welcome/: index.md
firmware/lab01/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
firmware/lab01/.cargo/: config.toml
firmware/lab01/src/: lib.rs
firmware/lab01/src/display/: mod.rs
slides/: README.md  build.sh  package-lock.json  package.json  slides.md
slides/01/: 404.html  _redirects  index.html
slides/01/assets/: DrawingControls-3Bww_erz.js  DrawingControls-CPY4a0ov.js  DrawingControls-D-AUChyi.js  DrawingControls-DXK62dA5.js  DrawingControls-usiAcHvH.js  DrawingLayer--bKK47xK.js  DrawingLayer-DrRAmzOB.js  DrawingLayer-DsVgTExo.js  DrawingLayer-oagdrISs.js  DrawingLayer-u45aqEIl.js  NoteDisplay-B_fGqRcR.js  NoteDisplay-BcMaRziJ.js  (+18 more)
slides/02/: 404.html  index.html
slides/03/: 404.html  _redirects  index.html
slides/04/: 404.html  _redirects  index.html
slides/05/: index.html
slides/06/: 404.html  index.html
slides/07/: 404.html  _redirects  index.html
slides/08/: 404.html  _redirects  index.html
slides/09/: 404.html  index.html
slides/10/: _redirects  index.html
src/css/: custom.css
src/pages/: index.tsx
website/: docusaurus.config.ts  package-lock.json  package.json  versions.json
website/tutorial/: _category_.json
(+4277 files in other folders)
