[package]
name = "lab01"
version = "0.1.0"
description = "Lab 2 source code"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.1.0" }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3" }
embassy-rp = { version = "0.1.0", features = ["unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0" }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.1.0" }
cyw43 = { version = "0.1.0", features = ["firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["overclock"] }

fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3" }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.6.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0.0-rc.2"
embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async"] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2
