[package]
name = "my_embassy_project"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
embassy = "0.1"
embassy-executor = "0.1"
embassy-time = "0.1"
embassy-rp = "0.1"
embassy-nrf = "0.1"
heapless = "0.7.4"
panic-halt = "0.2"
embedded-hal = "0.2"
hd44780-driver = "0.3"
embedded-graphics = "0.7.1"

[build-dependencies]
