[workspace]

[package]
name = "lab08_ex1_2"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embassy-embedded-hal = {version = "0.1.0", package = "embassy-embedded-hal", git = "https://github.com/embassy-rs/embassy.git"}
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-40960"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-rp", features = ["time-driver", "critical-section-impl"] }
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", features = ["proto-ipv4", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-usb-logger = {version = "0.1.0", package = "embassy-usb-logger", git = "https://github.com/embassy-rs/embassy.git"}
log = "0.4"
embedded-io-async = "0.6.1"
embassy-time ={version = "0.3.0", package = "embassy-time", git = "https://github.com/embassy-rs/embassy.git"}
static_cell = { version = "2", features = ["nightly"]}
cyw43-pio = {package = "cyw43-pio", git = "https://github.com/embassy-rs/embassy.git"}
cyw43 = {package = "cyw43", git = "https://github.com/embassy-rs/embassy.git"}
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
embassy-usb = {version = "0.1.0", package = "embassy-usb", git = "https://github.com/embassy-rs/embassy.git"}
embassy-futures = {version = "0.1.1", package = "embassy-futures", git = "https://github.com/embassy-rs/embassy.git"}
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embassy-sync = { version = "0.5.0", package = "embassy-sync", git = "https://github.com/embassy-rs/embassy.git"}
eeprom24x = "0.7.0"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
embedded-hal = "1.0.0"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0-rc.2"
embedded-hal-bus = { version = "0.1.0-rc.2", features = ["async"] }
rppal = "0.18.0"
st7735-lcd = "0.10.0"
