[package]
name = "embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cyw43 = "0.1.0"
cyw43-pio = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-32768"] }
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-time = "0.3.0"
embassy-usb-logger = "0.1.0"
log = "0.4.21"
panic-probe = "0.3.2"
embassy-sync = { version = "0.5.0", package = "embassy-sync", git = "https://github.com/embassy-rs/embassy.git"}
embassy-futures = {version = "0.1.1", package = "embassy-futures", git = "https://github.com/embassy-rs/embassy.git"}
embedded-hal = "0.2.6"
rp-hal = "0.0.2"
cortex-m-semihosting = "0.5.0"
